--- a/client/src/components/Main/style.css
+++ b/client/src/components/Main/style.css
@@ -1,10 +1,9 @@
 body, html {
   height: 100%;
   margin: 0;
-  font-size: 24px;
-  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 400;
-  line-height: 1.8em;
   color: #666;
 }
 
@@ -34,7 +33,7 @@ scroll = normal
 }
 
 .pimg3 {
-  background-image: url('../Images/view-1.jpg');
+  background-image: url('../Images/climbing-2.jpg');
   min-height: 900px;
 }
 
@@ -50,17 +49,9 @@ scroll = normal
 
 .section {
   text-align: center;
-  padding: 50px 80px;
-}
-
-.section-light {
-  background-color: #f4f4f4;
-  color: #666;
-}
-
-.section-dark {
-  background-color: #282e34;
-  color: #ddd;
+  padding: 20px;
+  background-color: steelblue;
+  color: crimson;
 }
 
 .ptext {
@@ -90,10 +81,9 @@ scroll = normal
   }
 }
 
-h1 {
+.project {
   color: rgb(163, 81, 163);
   font-weight: 600;
   margin: 0;
   padding-top: 7%;
-
 }
