--- a/client/src/components/Title/style.css
+++ b/client/src/components/Title/style.css
@@ -1,8 +1,8 @@
 .title {
     width: 100%;
     text-align: center;
-    font-size: 3rem;
-    text-decoration: underline;
-    color: #2A77AE;
+    font-size: 3.5rem;
+    font-weight: 600;
+    color: red;
     margin-bottom: 50px;
   }
