finished climbing api call and appended cards plus some css

--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -3,7 +3,8 @@
     height: 450px;
     margin: 20px;
     border-radius: 7px;
-    border: 2px solid black;
+    border: 2px solid gray;
+    background-color: #282e34;
 }
 
 img {
