--- a/client/src/components/Title/style.css
+++ b/client/src/components/Title/style.css
@@ -3,6 +3,6 @@
     text-align: center;
     font-size: 3.5rem;
     font-weight: 600;
-    color: red;
+    color: white;
     margin-bottom: 50px;
   }
