--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,7 +1,7 @@
 /*footer*/
-footer {
+
+.footer-main {
     background: #666666;
-    color: #fff;
     color: #ccc;
     font-size: 24px;
     text-align: center;
@@ -9,5 +9,28 @@ footer {
     bottom: 0px;
     height: 70px;   
     line-height: 3;
-}  
+}
 
+.footer-favorite {
+    background: #666666;
+    color: #ccc;
+    font-size: 24px;
+    text-align: center;
+    width: 100%; 
+    bottom: 0px;
+    height: 60px;   
+    line-height: 3;
+    position: fixed;
+}
+
+.footer-user {
+    background: #666666;
+    color: #ccc;
+    font-size: 24px;
+    text-align: center;
+    width: 100%; 
+    bottom: 0px;
+    height: 60px;   
+    line-height: 3;
+    position: fixed;
+}
