--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,3 +1,17 @@
 .nav-wrapper {
-    background-color: grey;
+    background-color: #051622;
   }
+
+link {
+  color: #051622;
+}
+
+.navbar {
+  color: #051622;
+  background-color: #051622;
+}
+
+.navbar-section .btn {
+  color: #1BA098;
+  background-color: #051622;
+}
