--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -1,5 +1,5 @@
 .card {
-    max-width: 400px;
+    width: 15vw;
     height: 450px;
     margin: 20px;
     border-radius:15px;
@@ -16,11 +16,37 @@ img {
 .btn-small {
     border-radius: 5px;
     margin-top: 7px;
+    display: none;
 }
 
 .card-title {
     color: #DEB992;
 } 
+
+
+
+@media (max-width: 1980px){
+    /* .card .card-title {
+        font-size: 14px;
+    }
+
+    p {
+        font-size: 8px;
+    } */
+    
+    .card-title {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        width: 200px;
+    }
+
+    .card:hover .card-title {
+        overflow: visible;
+        white-space: normal;
+        width: auto;
+    }
+}
 
 .card-title:hover {
 color: black;
