--- a/client/src/components/Main/style.css
+++ b/client/src/components/Main/style.css
@@ -4,7 +4,11 @@ body, html {
   font-size: 15px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 500;
-  color: #666;
+  background: url("../Images/hike-2.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .pimg1, .pimg2, .pimg3, .pimg4, .pimg5 {
@@ -51,7 +55,7 @@ scroll = normal
   text-align: center;
   padding: 20px;
   color: crimson;
- background-color: black;
+  background-color: rgba(0, 0, 0, 0.76);
 }
 
 
