Saving and displaying cards on favorites page. gave background and styled Favorites header

--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -16,8 +16,10 @@ img {
 
 .btn-small {
     border-radius: 5px;
-    margin-top: 7px;
-    /* display: none; */
+    /* margin-top: -60px; */
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .card-title {
