--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -72,3 +72,9 @@ color: black;
   transform: scale(1.05);
   border-radius: 15p;
 }
+
+@media only screen and (max-width: 900px) {
+    .card {
+        
+    }
+  }
