--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -6,13 +6,18 @@ link {
   color: #051622;
 }
 
-.navbar {
+.navbar-fixed {
+  position: fixed;
+  top: 0;
   color: #051622;
   background-color: #051622;
+  height: 80px;
 }
 
 .text-secondary {
-  font-size: 1em;
+  line-height: 3.4rem;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .navbar-section .btn {
